# Search

./: LICENCE.txt  README.md  dune-project  generics.opam  search.opam  searchM.opam
lib/: algo.ml  dune  genEq.ml  genOrd.ml  genShow.ml  generic.ml  memo.ml
tests/: dune  test.ml
