opam-version: "2.0"
name: "search"
synopsis: "Collection of generic graph search algorithms"
version: "dev"
maintainer: "dvlasits@gmail.com"
authors: ["Daniel Vlasits" "Patrick Reader"]
homepage: "https://github.com/modular-implicits/search"
dev-repo: "git+https://github.com/modular-implicits/search.git"
bug-reports: "http://github.com/modular-implicits/search/issues"
license: "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {build}
  "ocaml-variants"
    { = "4.02.1+modular-implicits" | = "4.02.1+modular-implicits-ber" }
  "imp"
  "dataStructures"
]
